--- a/style/header.css
+++ b/style/header.css
@@ -11,8 +11,14 @@ header .container {
 #profile {
     display: flex;
     gap: 32px;
-    width: 592px;
-    
+    width: 592px;    
+}
+
+#profile img {
+    width: 176px;
+    height: 176px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 #profile > div {
